# mathkit

./: .gitignore  .travis.yml  README.md  appveyor.yml  configure.ac  makefile.am  mathkit.vcxproj
include/: mathkit.h  mk-common.h  mk-glm.h  mk-matrix.h  mk-vector.h  mk.h
include/impl/: mk-intrin-avx.h  mk-intrin-sse.h  mk-intrin.h  mk-matrix-impl-mat-raw.h  mk-matrix-impl-mat.h  mk-matrix-impl-raw.h  mk-matrix-impl-sc.h  mki-matrix-mat.h  mki-matrix-raw-sse.h  mki-matrix-raw.h  mki-matrix-sc.h
src/: config.h  dllmain.c  mathkit.c  mk__mem.h  mk_static.c
src/glm/: mk_glm.c
src/matrix/: matrix.c
src/vector/: mk_vector.c
